# signifier

./: .gitignore  meson.build  readme.md
res/shaders/: composer.fs  march.fs
src/: demoscenes.h  main.cpp  object.cpp  object.h  scene.cpp  scene.h  utils.h
